# foo_ai

./: CMakeLists.txt  CMakePresets.json  LICENSE  Preferences.cpp  Preferences.h  README.md  current_track_resource.cpp  current_track_resource.h  foo_ai.rc  guid.h  initquit.cpp  main.cpp  mcp.cpp  mcp.h  playlist_resource.cpp  playlist_resource.h  preferences.cpp  preferences.h  resources.h  safe_main_thread_call.h  vcpkg-configuration.json  vcpkg.json  volume_resource.cpp  volume_resource.h
vcpkg-overlay/base64/: portfile.cmake  vcpkg.json
vcpkg-overlay/cpp-mcp/: portfile.cmake  vcpkg.json
vcpkg-overlay/foosdk/: portfile.cmake  vcpkg.json
